Makefile: VPATH added

--- a/my_pass/1.getting_started/Makefile
+++ b/my_pass/1.getting_started/Makefile
@@ -1,13 +1,15 @@
+VPATH = src
+
 all: main
 
 main: main.o glad.o
 	g++ -lglfw glad.o main.o -o main
 
 main.o: main.cpp
-	g++ -I./include -c -o main.o main.cpp
+	g++ -I./include -c -o $@ $<
 
-glad.o: src/glad.c
-	g++ -I./include -c -o glad.o src/glad.c
+glad.o: glad.c
+	g++ -I./include -c -o $@ $<
 
 clean:
 	rm -rf glad.o main.o main
