Textures: work started

--- a/excercises/1.getting_started/Makefile
+++ b/excercises/1.getting_started/Makefile
@@ -4,7 +4,14 @@ CFLAGS = -I ../../deps/usr/local/include -I ../../utils/include
 VPATH = src
 BIN =
 
-sources = triangle1.cpp triangle2-shaders.cpp triangle2-shaders-more-attrs.cpp triangle2-shaders-uniforms.cpp triangle3.cpp
+sources = \
+   triangle1.cpp \
+   triangle2-shaders.cpp \
+   triangle2-shaders-more-attrs.cpp \
+   triangle2-shaders-uniforms.cpp \
+   triangle3.cpp \
+   textures1.cpp
+
 objects = $(sources:.cpp=.o)
 executables = $(objects:.o=$(BIN))
 
