--- a/excercises/1.getting_started/glm_raylib_sandbox/Makefile
+++ b/excercises/1.getting_started/glm_raylib_sandbox/Makefile
@@ -4,7 +4,10 @@ CFLAGS = -I glm_prefix/include/
 LDFLAGS = -lraylib
 
 sources = start.cpp \
-	  axes.cpp
+	  axes.cpp \
+	  dot_product.cpp \
+	  cross_product.cpp \
+	  mat_operations.cpp
 
 objects = $(sources:.cpp=.o)
 executables = $(objects:.o=$(BIN))
